[package]
name = "ce-integration"
version = "0.1.0"
edition = "2024"
description = "Real two-node CE mesh integration harness — boots an isolated test mesh and asserts cross-node scenarios end-to-end."
license = "MIT"
publish = false

[[bin]]
name = "ce-integration"
path = "src/main.rs"

[dependencies]
ce-rs = { path = "../ce-rs" }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
